Added index logo

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <body>
+            <img src="cat.PNG" alt="">
             <h1>
                 Coming Soon...
             </h1>
