centered image and tagline

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <body>
-            <img src="cat.PNG" alt="">
-            <h1>
-                Coming Soon...
-            </h1>
-        </body>
+        <link rel="stylesheet" href="style.css">
     </head>
+        <body>
+            <div id="container">
+                <img id="logo" src="cat.PNG" alt="">
+                <h1>Coming Soon...</h1>
+            </div>
+        </body>
 </html>
